use Map.of
Signed-off-by: Artur Souza <asouza.pro@gmail.com>