@@ -54,7 +54,7 @@ public class PostgreSQLDaprKeyValueTemplateIT {
       "host=postgres user=postgres password=password port=5432 connect_timeout=10 database=dapr_db";
   private static final Map<String, String> STATE_STORE_PROPERTIES = createStateStoreProperties();
 
-  private static final Map<String, String> BINDING_PROPERTIES = Collections.singletonMap("connectionString", CONNECTION_STRING);
+  private static final Map<String, String> BINDING_PROPERTIES = Map.of("connectionString", CONNECTION_STRING);
 
   private static final Network DAPR_NETWORK = Network.newNetwork();
 
@@ -96,7 +96,7 @@ public class PostgreSQLDaprKeyValueTemplateIT {
 
   @BeforeEach
   public void setUp() {
-    var meta = Collections.singletonMap("sql", "delete from state");
+    var meta = Map.of("sql", "delete from state");
 
     daprClient.invokeBinding(BINDING_NAME, "exec", null, meta).block();
   }
