@@ -71,8 +71,7 @@ public class DaprHttp implements AutoCloseable {
   /**
    * Context entries allowed to be in HTTP Headers.
    */
-  private static final Set<String> ALLOWED_CONTEXT_IN_HEADERS =
-      Collections.unmodifiableSet(new HashSet<>(Arrays.asList("grpc-trace-bin", "traceparent", "tracestate")));
+  private static final Set<String> ALLOWED_CONTEXT_IN_HEADERS = Set.of("grpc-trace-bin", "traceparent", "tracestate");
 
   /**
    * Object mapper to parse DaprError with or without details.
